"Updated .gitignore file: added weth_txn_hashes.csv and output directory, removed hyphen from 'regaular-expression.js'"

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,8 @@ practice.json
 projectStatsSummary.json
 regaular-expression.js
 extract.js
-
+weth_txn_hashes.csv
+output
 agenda.js
 
 # NYC Test coverage
