--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gene_alpha",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "",
   "main": "./src/app.js",
   "type": "commonjs",
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csv-parser": "^3.2.0",
+    "csv-stringify": "^6.6.0",
     "csv-writer": "^1.6.0",
     "debug": "^4.3.7",
     "dotenv": "^16.4.7",
